<resources>
    <string name="app_name">ToDoList</string>
    <string name="task_name">Task Name</string>
    <string name="task_description">Task Description</string>
    <string name="task_start_datetime">Start DateTime</string>
    <string name="task_end_datetime">End DateTime</string>
    <string name="delete_button">Delete</string>
    <string name="update_button">Update</string>
    <string name="save_button">Save</string>
    <string name="edit_button">edit</string>
    <string name="add_button">Add</string>
    <string name="todo">TODO</string>
</resources>
